Fix update button vertical alignment offset due to box-shadow

--- a/src/budgeteer/Settings/AccountNames/accountNames.scss
+++ b/src/budgeteer/Settings/AccountNames/accountNames.scss
@@ -30,6 +30,7 @@
 
 	&--submit {
 		position: relative;
+		margin-bottom: 6px;
 		padding: 10px 20px;
 		background-color: $green;
 		border-radius: 5px;
